commit de prueba

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <h1>¿Te gusta la gimnasia rítmica?</h1>
         <p>
           Apúntate al Club o ven a conocernos y disfruta de este deporte con
-          nosotros
+          nosotros.
         </p>
         <div class="callout-btn-section">
           <a href="contacto.html" target="blank" class="callout-btn1">Contacto</a>
