seccion de noticias

--- a/index.html
+++ b/index.html
@@ -135,8 +135,54 @@
       </div>
       <div class="col"></div>
     </div>
+  </div> -->
+
+  <!-- News -->
+  <div class="container news-container">
+    <div class="row news-row">
+      <div class="col-6 news-col">
+        <div class="img-wrap">
+          <img src="assets/noticia.jpg" class="news-image">
+        </div>
+        <div class="news-text">
+          <h4>10 octubre 2020</h4>
+          <h3>Noticia de ejemplo</h3>
+          <p>Nuestras instalaciones son amplias y nos permiten cumplir con todos los protocolos</p>
+
+        </div>
+      </div>
+      <div class="col-6 news-col">
+        <div class="img-wrap">
+          <img src="assets/noticia2.jpg" class="news-image">
+        </div>
+        <div class="news-text">
+          <h4>10 octubre 2020</h4>
+          <h3>Noticia de ejemplo</h3>
+          <p>Nuestras instalaciones son amplias y nos permiten cumplir con todos los protocolos</p>
+        </div>
+      </div>
+      <div class="col-6 news-col">
+        <div class="img-wrap">
+          <img src="assets/Más fotos/WhatsApp Image 2020-10-27 at 15.39.08 (2).jpeg" class="news-image">
+        </div>
+        <div class="news-text">
+          <h4>10 octubre 2020</h4>
+          <h3>Noticia de ejemplo</h3>
+          <p>Nuestras instalaciones son amplias y nos permiten cumplir con todos los protocolos</p>
+        </div>
+      </div>
+      <div class="col-6 news-col">
+        <div class="img-wrap">
+          <img src="assets/Más fotos/WhatsApp Image 2020-10-27 at 15.39.05.jpeg" class="news-image">
+        </div>
+        <div class="news-text">
+          <h4>10 octubre 2020</h4>
+          <h3>Noticia de ejemplo</h3>
+          <p>Nuestras instalaciones son amplias y nos permiten cumplir con todos los protocolos</p>
+        </div>
+      </div>
+    </div>
   </div>
-  <br /> -->
 
   <!-- Callout -->
   <div class="container callout">
@@ -145,7 +191,7 @@
         <h1>¿Te gusta la gimnasia rítmica?</h1>
         <p>
           Apúntate al Club o ven a conocernos y disfruta de este deporte con
-          nosotros.
+          nosotros
         </p>
         <div class="callout-btn-section">
           <a href="contacto.html" target="blank" class="callout-btn1">Contacto</a>
