--- a/login.html
+++ b/login.html
@@ -14,50 +14,35 @@
     <!-- FontAwesome -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
     />
+
     <title>Iniciar sesión</title>
   </head>
   <body>
-    <div class="modal-body modal-dialog">
-      <div class="container col-lg-11">
-        <div class="modal-content col-lg-9">
-          <form class="formulario">
+    <div class="modal-dialog">
+      <div class="main-section">
+        <div class="modal-content">
+          <div class="col-12 user-img text-center">
             <img src="assets/logo_ritmica.png" width="150px" height="150px" />
+          </div>
+          <form class="formulario">
             <h1>Iniciar sesión</h1>
-            <div class="form-group">
-              <!-- <label for="exampleInputEmail1">Nombre de usuario</label>-->
-              <input
-                type="text"
-                class="form-control"
-                id="exampleInputEmail1"
-                aria-describedby="emailHelp"
-                placeholder="usuario"
-              />
-              <small id="emailHelp" class="form-text text-muted"
-                >We'll never share your email with anyone else.</small
-              >
+            <div class="form-group" id="user-group">
+              <input type="text" class="form-control" placeholder="usuario" />
             </div>
-            <div class="form-group">
-              <label for="exampleInputPassword1">Contraseña</label>
+            <div class="form-group" id="password-group">
               <input
                 type="password"
                 class="form-control"
-                id="exampleInputPassword1"
-                placeholder="Password"
+                placeholder="contraseña"
               />
             </div>
             <div class="form-group form-check">
-              <input
-                type="checkbox"
-                class="form-check-input"
-                id="exampleCheck1"
-              />
-              <label class="form-check-label" for="exampleCheck1"
-                >Check me out</label
-              >
+              <button type="submit" class="btn btn-primary">Continuar</button>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
           </form>
         </div>
       </div>
