--- a/login.html
+++ b/login.html
@@ -40,8 +40,20 @@
                 placeholder="contraseña"
               />
             </div>
-            <div class="form-group form-check">
-              <button type="submit" class="btn btn-primary">Continuar</button>
+            <div class="col-12 help" id="help-icon">
+              <a href="#"
+                ><i class="fas fa-caret-right"></i>¿Necesitas ayuda?</a
+              >
+            </div>
+            <div class="col-12 forgot" id="forgot-icon">
+              <a href="#"
+                ><i class="fas fa-caret-right"></i>¿Olvidó su contraseña?</a
+              >
+            </div>
+            <div class="form-group form-button text-right">
+              <button type="submit" class="btn btn-primary">
+                <i class="fas fa-arrow-right"></i> Continuar
+              </button>
             </div>
           </form>
         </div>
