--- a/index.html
+++ b/index.html
@@ -1,117 +1,115 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ritmica la mojonera</title>
 
-    <!-- FontAwesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ritmica la mojonera</title>
 
-    <link rel="stylesheet" href="style.css" />
-  </head>
+  <!-- FontAwesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 
-  <body>
-    <!-- Header -->
-    <div class="container">
-      <!-- Logo -->
-      <div class="row header">
-        <div class="col"></div>
-        <div class="col-11 header-top">
-          <div>
-            <img src="assets/logo_ritmica.png" class="header-logo" />
-            <a href="https://www.facebook.com/ritmicalamojonera">
-              <i class="fab fa-facebook-square fa-2x"></i>
-            </a>
-            <a href="https://www.youtube.com/channel/UC1t4MldjalCTkdC2cYVgVfg">
-              <i class="fab fa-youtube fa-2x"></i>
-            </a>
-            <a href="https://www.instagram.com/ritmicalamojonera/?hl=es">
-              <i class="fab fa-instagram-square fa-2x"></i>
-            </a>
-          </div>
-          <a href="login.html">
-            <i class="far fa-user fa-3x login-icon"></i>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <!-- Header -->
+  <div class="container">
+    <!-- Logo -->
+    <div class="row header">
+      <div class="col"></div>
+      <div class="col-11 header-top">
+        <div>
+          <img src="assets/logo_ritmica.png" class="header-logo" />
+          <a href="https://www.facebook.com/ritmicalamojonera">
+            <i class="fab fa-facebook-square fa-2x"></i>
+          </a>
+          <a href="https://www.youtube.com/channel/UC1t4MldjalCTkdC2cYVgVfg">
+            <i class="fab fa-youtube fa-2x"></i>
+          </a>
+          <a href="https://www.instagram.com/ritmicalamojonera/?hl=es">
+            <i class="fab fa-instagram-square fa-2x"></i>
           </a>
         </div>
-        <div class="col"></div>
+        <a href="login.html">
+          <i class="far fa-user fa-3x login-icon"></i>
+        </a>
       </div>
-
-      <!-- Menu -->
-      <div class="row menu-color">
-        <div class="col"></div>
-        <div class="col-11 topnav" id="topnav">
-          <a class="nav-btn" href="index.html">Inicio</a>
-          <div class="dropdown">
-            <a class="nav-btn" href="el_club.html">El Club</a>
-            <div class="dropdown-content">
-              <a href="cuerpoTecnico.html">Cuerpo técnico</a>
-              <a href="palmares.html">Palmarés</a>
-            </div>
-          </div>
-          <a class="nav-btn" href="normativa.html">Normativa</a>
-          <div class="dropdown">
-            <a class="nav-btn" href="actividades.html">Actividades</a>
-            <div class="dropdown-content">
-              <a href="actividadesVerano.html">Actividades de verano</a>
-              <a href="escuela.html">Escuela</a>
-              <a href="federadas.html">Federadas</a>
-            </div>
-          </div>
-          <a class="nav-btn" href="matriculacion.html">Matriculacion</a>
-          <div class="dropdown">
-            <a class="nav-btn" href="competiciones.html">Competiciones</a>
-            <div class="dropdown-content">
-              <a href="provincial.html">Provincial</a>
-              <a href="autonomica.html">Autonómica</a>
-              <a href="nacional.html">Nacional</a>
-            </div>
-          </div>
-          <a class="nav-btn" href="contacto.html">Contacto</a>
-          <a class="dropdown-icon" href="javascript:void(0)">
-            <i class="fas fa-bars"></i>
-          </a>
-        </div>
-        <div class="col"></div>
-      </div>
+      <div class="col"></div>
     </div>
 
-    <!-- Slider -->
-    <div class="slider">
-      <div class="slides">
-        <div class="slide first-slide">
-          <img src="assets/slider1.jpeg" id="first-img" />
+    <!-- Menu -->
+    <div class="row menu-color">
+      <div class="col"></div>
+      <div class="col-11 topnav" id="topnav">
+        <a class="nav-btn" href="index.html">Inicio</a>
+        <div class="dropdown">
+          <a class="nav-btn" href="el_club.html">El Club</a>
+          <div class="dropdown-content">
+            <a href="cuerpoTecnico.html">Cuerpo técnico</a>
+            <a href="palmares.html">Palmarés</a>
+          </div>
         </div>
-        <div class="slide slide-main">
-          <img src="assets/slider1.jpeg" id="main-img" />
+        <a class="nav-btn" href="normativa.html">Normativa</a>
+        <div class="dropdown">
+          <a class="nav-btn" href="actividades.html">Actividades</a>
+          <div class="dropdown-content">
+            <a href="actividadesVerano.html">Actividades de verano</a>
+            <a href="escuela.html">Escuela</a>
+            <a href="federadas.html">Federadas</a>
+          </div>
         </div>
-        <div class="slide slide-right">
-          <img src="assets/slider1.jpeg" id="last-img" />
+        <a class="nav-btn" href="matriculacion.html">Matriculacion</a>
+        <div class="dropdown">
+          <a class="nav-btn" href="competiciones.html">Competiciones</a>
+          <div class="dropdown-content">
+            <a href="provincial.html">Provincial</a>
+            <a href="autonomica.html">Autonómica</a>
+            <a href="nacional.html">Nacional</a>
+          </div>
         </div>
+        <a class="nav-btn" href="contacto.html">Contacto</a>
+        <a class="dropdown-icon" href="javascript:void(0)">
+          <i class="fas fa-bars"></i>
+        </a>
       </div>
-      <div class="slider-arrows">
-        <div class="slider-arrow" id="slider-arrow-left">
-          <i class="fas fa-angle-left fa-2x"></i>
-        </div>
-        <div class="slider-arrow" id="slider-arrow-right">
-          <i class="fas fa-angle-right fa-2x"></i>
-        </div>
+      <div class="col"></div>
+    </div>
+  </div>
+
+  <!-- Slider -->
+  <div class="slider">
+    <div class="slides">
+      <div class="slide first-slide">
+        <img src="assets/slider1.jpeg" id="first-img" />
       </div>
-      <div class="slider-btns">
-        <div class="slide-btn" id="slide-btn-1"></div>
-        <div class="slide-btn" id="slide-btn-2"></div>
-        <div class="slide-btn" id="slide-btn-3"></div>
+      <div class="slide slide-main">
+        <img src="assets/slider1.jpeg" id="main-img" />
+      </div>
+      <div class="slide slide-right">
+        <img src="assets/slider1.jpeg" id="last-img" />
       </div>
     </div>
+    <div class="slider-arrows">
+      <div class="slider-arrow" id="slider-arrow-left">
+        <i class="fas fa-angle-left fa-2x"></i>
+      </div>
+      <div class="slider-arrow" id="slider-arrow-right">
+        <i class="fas fa-angle-right fa-2x"></i>
+      </div>
+    </div>
+    <div class="slider-btns">
+      <div class="slide-btn" id="slide-btn-1"></div>
+      <div class="slide-btn" id="slide-btn-2"></div>
+      <div class="slide-btn" id="slide-btn-3"></div>
+    </div>
+  </div>
 
-    <!-- Prueba -->
-    <!-- PRUEBAAAA -->
-    <!--PRUENASRMAA-->
-    <!-- Covid Protocol -->
-    <!-- <div class="container covid-container">
+  <!-- Prueba -->
+  <!-- PRUEBAAAA -->
+  <!--PRUENASRMAA-->
+  <!-- Covid Protocol -->
+  <!-- <div class="container covid-container">
     <div class="row">
       <div class="col covid-header-col">
         <h1>¡Ven a practicar rítmica!</h1>
@@ -142,141 +140,134 @@
     </div>
   </div> -->
 
-    <!-- News -->
-    <div class="container news-container">
-      <div class="row news-row">
-        <div class="col-6 news-col">
-          <div class="img-wrap">
-            <img src="assets/noticia.jpg" class="news-image" />
-          </div>
-          <div class="news-text">
-            <h4>10 octubre 2020</h4>
-            <h3>Noticia de ejemplo</h3>
-            <p>
-              Nuestras instalaciones son amplias y nos permiten cumplir con
-              todos los protocolos
-            </p>
-          </div>
+  <!-- News -->
+  <div class="container news-container">
+    <div class="row news-row">
+      <div class="col-6 news-col">
+        <div class="img-wrap">
+          <img src="assets/noticia.jpg" class="news-image" />
         </div>
-        <div class="col-6 news-col">
-          <div class="img-wrap">
-            <img src="assets/noticia2.jpg" class="news-image" />
-          </div>
-          <div class="news-text">
-            <h4>10 octubre 2020</h4>
-            <h3>Noticia de ejemplo</h3>
-            <p>
-              Nuestras instalaciones son amplias y nos permiten cumplir con
-              todos los protocolos
-            </p>
-          </div>
+        <div class="news-text">
+          <h4>10 octubre 2020</h4>
+          <h3>Noticia de ejemplo</h3>
+          <p>
+            Nuestras instalaciones son amplias y nos permiten cumplir con
+            todos los protocolos
+          </p>
         </div>
-        <div class="col-6 news-col">
-          <div class="img-wrap">
-            <img
-              src="assets/Más fotos/WhatsApp Image 2020-10-27 at 15.39.08 (2).jpeg"
-              class="news-image"
-            />
-          </div>
-          <div class="news-text">
-            <h4>10 octubre 2020</h4>
-            <h3>Noticia de ejemplo</h3>
-            <p>
-              Nuestras instalaciones son amplias y nos permiten cumplir con
-              todos los protocolos
-            </p>
-          </div>
+      </div>
+      <div class="col-6 news-col">
+        <div class="img-wrap">
+          <img src="assets/noticia2.jpg" class="news-image" />
         </div>
-        <div class="col-6 news-col">
-          <div class="img-wrap">
-            <img
-              src="assets/Más fotos/WhatsApp Image 2020-10-27 at 15.39.05.jpeg"
-              class="news-image"
-            />
-          </div>
-          <div class="news-text">
-            <h4>10 octubre 2020</h4>
-            <h3>Noticia de ejemplo</h3>
-            <p>
-              Nuestras instalaciones son amplias y nos permiten cumplir con
-              todos los protocolos
-            </p>
-          </div>
+        <div class="news-text">
+          <h4>10 octubre 2020</h4>
+          <h3>Noticia de ejemplo</h3>
+          <p>
+            Nuestras instalaciones son amplias y nos permiten cumplir con
+            todos los protocolos
+          </p>
+        </div>
+      </div>
+      <div class="col-6 news-col">
+        <div class="img-wrap">
+          <img src="assets/Más fotos/WhatsApp Image 2020-10-27 at 15.39.08 (2).jpeg" class="news-image" />
+        </div>
+        <div class="news-text">
+          <h4>10 octubre 2020</h4>
+          <h3>Noticia de ejemplo</h3>
+          <p>
+            Nuestras instalaciones son amplias y nos permiten cumplir con
+            todos los protocolos
+          </p>
+        </div>
+      </div>
+      <div class="col-6 news-col">
+        <div class="img-wrap">
+          <img src="assets/Más fotos/WhatsApp Image 2020-10-27 at 15.39.05.jpeg" class="news-image" />
+        </div>
+        <div class="news-text">
+          <h4>10 octubre 2020</h4>
+          <h3>Noticia de ejemplo</h3>
+          <p>
+            Nuestras instalaciones son amplias y nos permiten cumplir con
+            todos los protocolos
+          </p>
         </div>
       </div>
     </div>
+  </div>
 
-    <!-- Callout -->
-    <div class="container callout">
-      <div class="row">
-        <div class="col-12 callout-col">
-          <h1>¿Te gusta la gimnasia rítmica?</h1>
-          <p>
-            Apúntate al Club o ven a conocernos y disfruta de este deporte con
-            nosotros
-          </p>
-          <div class="callout-btn-section">
-            <a href="contacto.html" target="blank" class="callout-btn1"
-              >Contacto</a
-            >
-            <a href="matriculacion.html" class="callout-btn2">Inscríbete</a>
-          </div>
+  <!-- Callout -->
+  <div class="container callout">
+    <div class="row">
+      <div class="col-12 callout-col">
+        <h1>¿Te gusta la gimnasia rítmica?</h1>
+        <p>
+          Apúntate al Club o ven a conocernos y disfruta de este deporte con
+          nosotros
+        </p>
+        <div class="callout-btn-section">
+          <a href="contacto.html" target="blank" class="callout-btn1">Contacto</a>
+          <a href="matriculacion.html" class="callout-btn2">Inscríbete</a>
         </div>
       </div>
     </div>
+  </div>
 
-    <!-- Footer -->
-    <div class="container-fluid footer">
-      <div class="row">
-        <div class="col"></div>
-        <div class="col-3 footer-map-col">
-          <h2>Ven a visitarnos</h2>
-          <p>
-            C/ Av. Europa, 143 (Carpa de usos multiples), La Mojonera-04745,
-            Almería
-          </p>
-          <!-- <img src="assets/mapa.png" class="footer-map"> -->
-        </div>
-        <div class="col-1"></div>
-        <div class="col-3 footer-contact-col">
-          <h2>Contacta con nosotros</h2>
-          <p>
-            Tlf: 621 01 32 65<br /><br />
-            Whatsapp: +34 621 01 32 65<br /><br />
-            Correo: cdrlamojonera@gmail.com
-          </p>
-        </div>
-        <div class="col-1"></div>
-        <div class="col-3 footer-social-col">
-          <h2>Siguenos en redes sociales</h2>
-          <a href="https://www.facebook.com/ritmicalamojonera">
-            <i class="fab fa-facebook-square fa-2x"></i>
-          </a>
-          <a href="https://www.youtube.com/channel/UC1t4MldjalCTkdC2cYVgVfg">
-            <i class="fab fa-youtube fa-2x"></i>
-          </a>
-          <a href="https://www.instagram.com/ritmicalamojonera/?hl=es">
-            <i class="fab fa-instagram-square fa-2x"></i>
-          </a>
-        </div>
-        <div class="col"></div>
+  <!-- Footer -->
+  <div class="container-fluid footer">
+    <div class="row">
+      <div class="col"></div>
+      <div class="col-3 footer-map-col">
+        <h2>Ven a visitarnos</h2>
+        <p>
+          C/ Av. Europa, 143 (Carpa de usos multiples), La Mojonera-04745,
+          Almería
+        </p>
+        <!-- <img src="assets/mapa.png" class="footer-map"> -->
       </div>
-      <div class="row">
-        <div class="col footer-copyright-col">
-          <p>
-            Copyright © 2020 - Ritmica la Mojonera - Todos los derechos
-            reservados
-          </p>
-          <button onclick="goBack()" id="goback-btn">
-            <i class="fas fa-arrow-up"></i>
-          </button>
-        </div>
+      <div class="col-1"></div>
+      <div class="col-3 footer-contact-col">
+        <h2>Contacta con nosotros</h2>
+        <p>
+          Tlf: 621 01 32 65<br /><br />
+          Whatsapp: +34 621 01 32 65<br /><br />
+          Correo: cdrlamojonera@gmail.com
+        </p>
+      </div>
+      <div class="col-1"></div>
+      <div class="col-3 footer-social-col">
+        <h2>Siguenos en redes sociales</h2>
+        <a href="https://www.facebook.com/ritmicalamojonera">
+          <i class="fab fa-facebook-square fa-2x"></i>
+        </a>
+        <a href="https://www.youtube.com/channel/UC1t4MldjalCTkdC2cYVgVfg">
+          <i class="fab fa-youtube fa-2x"></i>
+        </a>
+        <a href="https://www.instagram.com/ritmicalamojonera/?hl=es">
+          <i class="fab fa-instagram-square fa-2x"></i>
+        </a>
+      </div>
+      <div class="col"></div>
+    </div>
+    <div class="row">
+      <div class="col footer-copyright-col">
+        <p>
+          Copyright © 2020 - Ritmica la Mojonera - Todos los derechos
+          reservados
+        </p>
+        <button onclick="goBack()" id="goback-btn">
+          <i class="fas fa-arrow-up"></i>
+        </button>
       </div>
     </div>
+  </div>
 
-    <!-- JQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <!-- JQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <script src="main.js"></script>
-  </body>
+  <script src="main.js"></script>
+</body>
+
 </html>
