Añadido noticias y galeria al menu

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
             <a href="nacional.html">Nacional</a>
           </div>
         </div>
+        <a class="nav-btn" href="noticias.html">Noticias</a>
+        <a class="nav-btn" href="galeria.html">Galeria</a>
         <a class="nav-btn" href="contacto.html">Contacto</a>
         <a class="dropdown-icon" href="javascript:void(0)">
           <i class="fas fa-bars"></i>
