--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <div class="col"></div>
       <div class="col-11 header-top">
         <div>
-          <img src="assets/logo_ritmica.png" class="header-logo" />
-          <a href="https://www.facebook.com/ritmicalamojonera">
+          <img src="assets/logo_ritmica2.png" class="header-logo" />
+          <!-- <a href="https://www.facebook.com/ritmicalamojonera">
             <i class="fab fa-facebook-square fa-2x"></i>
           </a>
           <a href="https://www.youtube.com/channel/UC1t4MldjalCTkdC2cYVgVfg">
@@ -29,7 +29,7 @@
           </a>
           <a href="https://www.instagram.com/ritmicalamojonera/?hl=es">
             <i class="fab fa-instagram-square fa-2x"></i>
-          </a>
+          </a> -->
         </div>
         <a href="login.html">
           <i class="far fa-user fa-3x login-icon"></i>
@@ -92,14 +92,14 @@
         <img src="assets/slider1.jpeg" id="last-img" />
       </div>
     </div>
-    <div class="slider-arrows">
+    <!-- <div class="slider-arrows">
       <div class="slider-arrow" id="slider-arrow-left">
         <i class="fas fa-angle-left fa-2x"></i>
       </div>
       <div class="slider-arrow" id="slider-arrow-right">
         <i class="fas fa-angle-right fa-2x"></i>
       </div>
-    </div>
+    </div> -->
     <div class="slider-btns">
       <div class="slide-btn" id="slide-btn-1"></div>
       <div class="slide-btn" id="slide-btn-2"></div>
