--- a/index.html
+++ b/index.html
@@ -4,44 +4,37 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ritmica la mojonera</title>
+  <title>CD Ritmica la mojonera</title>
 
-  <!-- FontAwesome -->
+  <!-- FontAwesome CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-  <!-- Header -->
+  <!-- Menu Start -->
   <div class="container">
-    <!-- Logo -->
-    <div class="row header">
+    <!-- Header Start -->
+    <div class="row header-row">
       <div class="col"></div>
-      <div class="col-11 header-top">
-        <div>
-          <img src="assets/logo_ritmica2.png" class="header-logo" />
-          <!-- <a href="https://www.facebook.com/ritmicalamojonera">
-            <i class="fab fa-facebook-square fa-2x"></i>
-          </a>
-          <a href="https://www.youtube.com/channel/UC1t4MldjalCTkdC2cYVgVfg">
-            <i class="fab fa-youtube fa-2x"></i>
-          </a>
-          <a href="https://www.instagram.com/ritmicalamojonera/?hl=es">
-            <i class="fab fa-instagram-square fa-2x"></i>
-          </a> -->
+      <div class="col-10 header-col">
+        <img src="assets/logo_ritmica2.png">
+        <div class="header-icon-wrapper">
+          <a href="https://www.facebook.com/ritmicalamojonera" class="fab fa-facebook-square"></a>
+          <a href="https://www.youtube.com/channel/UC1t4MldjalCTkdC2cYVgVfg" class="fab fa-youtube"></a>
+          <a href="https://www.instagram.com/ritmicalamojonera/?hl=es" class="fab fa-instagram-square"></a>
+          <a href="login.html" class="far fa-user"></a>
         </div>
-        <a href="login.html">
-          <i class="far fa-user fa-3x login-icon"></i>
-        </a>
       </div>
       <div class="col"></div>
     </div>
+    <!-- Header End -->
 
-    <!-- Menu -->
-    <div class="row menu-color">
+    <!-- Navbar Start -->
+    <div class="row nav-row">
       <div class="col"></div>
-      <div class="col-11 topnav" id="topnav">
+      <div class="col-10 nav-col" id="nav-col">
         <a class="nav-btn" href="index.html">Inicio</a>
         <div class="dropdown">
           <a class="nav-btn" href="el_club.html">El Club</a>
@@ -72,14 +65,17 @@
         <a class="nav-btn" href="galeria.html">Galeria</a>
         <a class="nav-btn" href="contacto.html">Contacto</a>
         <a class="dropdown-icon" href="javascript:void(0)">
-          <i class="fas fa-bars"></i>
+          <span class="fas fa-bars"></span>
         </a>
       </div>
       <div class="col"></div>
     </div>
+    <!-- Navbar End -->
   </div>
+  <!-- Menu End -->
 
-  <!-- Slider -->
+
+  <!-- Slider Start -->
   <div class="slider">
     <div class="slides">
       <div class="slide first-slide">
@@ -92,20 +88,13 @@
         <img src="assets/slider1.jpeg" id="last-img" />
       </div>
     </div>
-    <!-- <div class="slider-arrows">
-      <div class="slider-arrow" id="slider-arrow-left">
-        <i class="fas fa-angle-left fa-2x"></i>
-      </div>
-      <div class="slider-arrow" id="slider-arrow-right">
-        <i class="fas fa-angle-right fa-2x"></i>
-      </div>
-    </div> -->
     <div class="slider-btns">
       <div class="slide-btn" id="slide-btn-1"></div>
       <div class="slide-btn" id="slide-btn-2"></div>
       <div class="slide-btn" id="slide-btn-3"></div>
     </div>
   </div>
+  <!-- Slider End -->
 
   <!-- Prueba -->
   <!-- PRUEBAAAA -->
@@ -218,7 +207,7 @@
   </div>
 
   <!-- Footer -->
-  <div class="container-fluid footer">
+  <div class="container footer">
     <div class="row">
       <div class="col"></div>
       <div class="col-3 footer-map-col">
