--- a/index.html
+++ b/index.html
@@ -96,42 +96,7 @@
   </div>
   <!-- Slider End -->
 
-  <!-- Prueba -->
-  <!-- PRUEBAAAA -->
-  <!--PRUENASRMAA-->
-  <!-- Covid Protocol -->
-  <!-- <div class="container covid-container">
-    <div class="row">
-      <div class="col covid-header-col">
-        <h1>¡Ven a practicar rítmica!</h1>
-      </div>
-    </div>
-    <div class="row covid-info">
-      <div class="col"></div>
-      <div class="col-5 covid-text-col">
-        <p>¡Bienvenidos a un día con nosotros!</p>
-        <p>
-          Queremos aprovechar para agradecer al Excmo. Ayuntamiento de La
-          Mojonera Deporte por permitir, en estos tiempos tan difíciles, la
-          continuidad de nuestros entrenamientos, por apostar por el deporte y
-          por ayudar, como lo están haciendo, para que podamos entrenar bajo
-          la máxima seguridad.
-        </p>
-        <p>
-          Haremos todo lo posible para que los sueños y objetivos de nuestras
-          chicas se cumplan.
-        </p>
-      </div>
-      <div class="col-5 covid-video-col">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Cm9TjwhUx_s" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-          allowfullscreen></iframe>
-      </div>
-      <div class="col"></div>
-    </div>
-  </div> -->
-
-  <!-- News -->
+  <!-- News Start -->
   <div class="container news-container">
     <div class="row news-row">
       <div class="col-6 news-col">
@@ -160,34 +125,10 @@
           </p>
         </div>
       </div>
-      <div class="col-6 news-col">
-        <div class="img-wrap">
-          <img src="assets/Más fotos/WhatsApp Image 2020-10-27 at 15.39.08 (2).jpeg" class="news-image" />
-        </div>
-        <div class="news-text">
-          <h4>10 octubre 2020</h4>
-          <h3>Noticia de ejemplo</h3>
-          <p>
-            Nuestras instalaciones son amplias y nos permiten cumplir con
-            todos los protocolos
-          </p>
-        </div>
-      </div>
-      <div class="col-6 news-col">
-        <div class="img-wrap">
-          <img src="assets/Más fotos/WhatsApp Image 2020-10-27 at 15.39.05.jpeg" class="news-image" />
-        </div>
-        <div class="news-text">
-          <h4>10 octubre 2020</h4>
-          <h3>Noticia de ejemplo</h3>
-          <p>
-            Nuestras instalaciones son amplias y nos permiten cumplir con
-            todos los protocolos
-          </p>
-        </div>
-      </div>
     </div>
   </div>
+  <!-- News End -->
+
 
   <!-- Callout -->
   <div class="container callout">
