Arreglada seccion de noticias

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </div>
     <!-- Header End -->
 
+
     <!-- Navbar Start -->
     <div class="row nav-row">
       <div class="col"></div>
@@ -96,6 +97,7 @@
   </div>
   <!-- Slider End -->
 
+
   <!-- News Start -->
   <div class="container news-container">
     <div class="row news-row">
@@ -104,25 +106,27 @@
           <img src="assets/noticia.jpg" class="news-image" />
         </div>
         <div class="news-text">
-          <h4>10 octubre 2020</h4>
-          <h3>Noticia de ejemplo</h3>
+          <h5>10 octubre 2020</h5>
+          <h3>Entrevista con el diario D-cerca</h3>
           <p>
-            Nuestras instalaciones son amplias y nos permiten cumplir con
-            todos los protocolos
+            Entrevistamos a Fabiana Pereyra, del Club Gimnasia Rítmica La Mojonera, quien nos cuenta cómo han vivido el
+            confinamiento las gimnastas del club...
           </p>
+          <a>Leer mas</a>
         </div>
       </div>
       <div class="col-6 news-col">
         <div class="img-wrap">
-          <img src="assets/noticia2.jpg" class="news-image" />
+          <img src="assets/Más fotos/WhatsApp Image 2020-10-29 at 14.49.15 (1).jpeg" class="news-image" />
         </div>
         <div class="news-text">
-          <h4>10 octubre 2020</h4>
-          <h3>Noticia de ejemplo</h3>
+          <h5>10 octubre 2020</h5>
+          <h3>Protocolo Covid</h3>
           <p>
             Nuestras instalaciones son amplias y nos permiten cumplir con
-            todos los protocolos
+            todos los protocolos...
           </p>
+          <a>Leer mas</a>
         </div>
       </div>
     </div>
@@ -130,7 +134,7 @@
   <!-- News End -->
 
 
-  <!-- Callout -->
+  <!-- Callout Start -->
   <div class="container callout">
     <div class="row">
       <div class="col-12 callout-col">
@@ -146,8 +150,10 @@
       </div>
     </div>
   </div>
+  <!-- Callout End -->
 
-  <!-- Footer -->
+
+  <!-- Footer Start -->
   <div class="container footer">
     <div class="row">
       <div class="col"></div>
@@ -195,6 +201,8 @@
       </div>
     </div>
   </div>
+  <!-- Footer End -->
+
 
   <!-- JQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
