arreglado el slider

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
     </div>
     <!-- Header End -->
 
-
     <!-- Navbar Start -->
     <div class="row nav-row">
       <div class="col"></div>
@@ -79,14 +78,20 @@
   <!-- Slider Start -->
   <div class="slider">
     <div class="slides">
-      <div class="slide first-slide">
-        <img src="assets/slider1.jpeg" id="first-img" />
+      <div class="slide slide-left">
+        <div class="slide-text-container">
+          <div class="slide-text"><span></span></div>
+        </div>
       </div>
       <div class="slide slide-main">
-        <img src="assets/slider1.jpeg" id="main-img" />
+        <div class="slide-text-container">
+          <div class="slide-text"><span>Texto de Ejemplo 1</span></div>
+        </div>
       </div>
       <div class="slide slide-right">
-        <img src="assets/slider1.jpeg" id="last-img" />
+        <div class="slide-text-container">
+          <div class="slide-text"><span></span></div>
+        </div>
       </div>
     </div>
     <div class="slider-btns">
@@ -177,15 +182,9 @@
       <div class="col-1"></div>
       <div class="col-3 footer-social-col">
         <h2>Siguenos en redes sociales</h2>
-        <a href="https://www.facebook.com/ritmicalamojonera">
-          <i class="fab fa-facebook-square fa-2x"></i>
-        </a>
-        <a href="https://www.youtube.com/channel/UC1t4MldjalCTkdC2cYVgVfg">
-          <i class="fab fa-youtube fa-2x"></i>
-        </a>
-        <a href="https://www.instagram.com/ritmicalamojonera/?hl=es">
-          <i class="fab fa-instagram-square fa-2x"></i>
-        </a>
+        <a href="https://www.facebook.com/ritmicalamojonera" class="fab fa-facebook-square"></a>
+        <a href="https://www.youtube.com/channel/UC1t4MldjalCTkdC2cYVgVfg" class="fab fa-youtube"></a>
+        <a href="https://www.instagram.com/ritmicalamojonera/?hl=es" class="fab fa-instagram-square"></a>
       </div>
       <div class="col"></div>
     </div>
