pagina principal casi acabada

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <div class="row header-row">
       <div class="col"></div>
       <div class="col-10 header-col">
-        <img src="assets/logo_ritmica2.png">
+        <a href="index.html">
+          <img src="assets/logo_ritmica2.png">
+        </a>
         <div class="header-icon-wrapper">
           <a href="https://www.facebook.com/ritmicalamojonera" class="fab fa-facebook-square"></a>
           <a href="https://www.youtube.com/channel/UC1t4MldjalCTkdC2cYVgVfg" class="fab fa-youtube"></a>
@@ -105,6 +107,7 @@
 
   <!-- News Start -->
   <div class="container news-container">
+    <h1>Últimas Noticias</h1>
     <div class="row news-row">
       <div class="col-6 news-col">
         <div class="img-wrap">
@@ -125,11 +128,11 @@
           <img src="assets/Más fotos/WhatsApp Image 2020-10-29 at 14.49.15 (1).jpeg" class="news-image" />
         </div>
         <div class="news-text">
-          <h5>10 octubre 2020</h5>
+          <h5>2 agosto 2020</h5>
           <h3>Protocolo Covid</h3>
           <p>
-            Nuestras instalaciones son amplias y nos permiten cumplir con
-            todos los protocolos...
+            Nuestras instalaciones son amplias y nos permiten cumplir con todos los protocolos texto de ejemplo texto de
+            ejemplo texto de ejemplo texto de e...
           </p>
           <a>Leer mas</a>
         </div>
@@ -143,10 +146,9 @@
   <div class="container callout">
     <div class="row">
       <div class="col-12 callout-col">
-        <h1>¿Te gusta la gimnasia rítmica?</h1>
+        <h1>Texto de ejemplo</h1>
         <p>
-          Apúntate al Club o ven a conocernos y disfruta de este deporte con
-          nosotros
+          Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo
         </p>
         <div class="callout-btn-section">
           <a href="contacto.html" target="blank" class="callout-btn1">Contacto</a>
@@ -161,32 +163,34 @@
   <!-- Footer Start -->
   <div class="container footer">
     <div class="row">
-      <div class="col"></div>
-      <div class="col-3 footer-map-col">
-        <h2>Ven a visitarnos</h2>
+      <div class="col-4 footer-col">
+        <h1>Ven a visitarnos</h1>
+        <p>Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto
+          de ejemplo</p>
         <p>
-          C/ Av. Europa, 143 (Carpa de usos multiples), La Mojonera-04745,
-          Almería
-        </p>
-        <!-- <img src="assets/mapa.png" class="footer-map"> -->
-      </div>
-      <div class="col-1"></div>
-      <div class="col-3 footer-contact-col">
-        <h2>Contacta con nosotros</h2>
-        <p>
-          Tlf: 621 01 32 65<br /><br />
-          Whatsapp: +34 621 01 32 65<br /><br />
-          Correo: cdrlamojonera@gmail.com
+          <a>
+            C/ Av. Europa, 143 (Carpa de usos multiples), La Mojonera-04745,
+            Almería
+          </a>
         </p>
       </div>
-      <div class="col-1"></div>
-      <div class="col-3 footer-social-col">
-        <h2>Siguenos en redes sociales</h2>
+      <div class="col-4 footer-col">
+        <h1>Contacta con nosotros</h1>
+        <p>Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo</p>
+        <p>
+          Correo: <a>cdrlamojonera@gmail.com</a><br>
+          Telefono: <a>621 013 265</a><br>
+          Whatsapp: <a>+34 621 013 265</a><br>
+        </p>
+      </div>
+      <div class="col-4 footer-col">
+        <h1>Siguenos en redes sociales</h1>
+        <p>Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto
+          de ejemplo texto de ejemplo</p>
         <a href="https://www.facebook.com/ritmicalamojonera" class="fab fa-facebook-square"></a>
         <a href="https://www.youtube.com/channel/UC1t4MldjalCTkdC2cYVgVfg" class="fab fa-youtube"></a>
         <a href="https://www.instagram.com/ritmicalamojonera/?hl=es" class="fab fa-instagram-square"></a>
       </div>
-      <div class="col"></div>
     </div>
     <div class="row">
       <div class="col footer-copyright-col">
@@ -194,11 +198,11 @@
           Copyright © 2020 - Ritmica la Mojonera - Todos los derechos
           reservados
         </p>
-        <button onclick="goBack()" id="goback-btn">
-          <i class="fas fa-arrow-up"></i>
-        </button>
       </div>
     </div>
+    <button onclick="goBack()" id="goback-btn">
+      <i class="fas fa-arrow-up"></i>
+    </button>
   </div>
   <!-- Footer End -->
 
