--- a/el_club.html
+++ b/el_club.html
@@ -1,148 +1,214 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>El club | Club de Gimnasia Rítmica La Mojonera</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ritmica la mojonera</title>
+    <!-- FontAwesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="elClub.css" />
+  </head>
 
-  <!-- FontAwesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+  <body>
+    <!-- Menu Start -->
+    <div class="container">
+      <!-- Header Start -->
+      <div class="row header-row">
+        <div class="col"></div>
+        <div class="col-10 header-col">
+          <a href="index.html">
+            <img src="assets/logo_ritmica2.png" />
+          </a>
+          <div class="header-icon-wrapper">
+            <a
+              href="https://www.facebook.com/ritmicalamojonera"
+              class="fab fa-facebook-square"
+            ></a>
+            <a
+              href="https://www.youtube.com/channel/UC1t4MldjalCTkdC2cYVgVfg"
+              class="fab fa-youtube"
+            ></a>
+            <a
+              href="https://www.instagram.com/ritmicalamojonera/?hl=es"
+              class="fab fa-instagram-square"
+            ></a>
+            <a href="login.html" class="far fa-user"></a>
+          </div>
+        </div>
+        <div class="col"></div>
+      </div>
+      <!-- Header End -->
 
-  <link rel="stylesheet" href="style.css" />
-</head>
+      <!-- Navbar Start -->
+      <div class="row nav-row">
+        <div class="col"></div>
+        <div class="col-10 nav-col" id="nav-col">
+          <a class="nav-btn" href="index.html">Inicio</a>
+          <div class="dropdown">
+            <a class="nav-btn" href="el_club.html">El Club</a>
+            <div class="dropdown-content">
+              <a href="cuerpoTecnico.html">Cuerpo técnico</a>
+              <a href="palmares.html">Palmarés</a>
+            </div>
+          </div>
+          <a class="nav-btn" href="normativa.html">Normativa</a>
+          <div class="dropdown">
+            <a class="nav-btn" href="actividades.html">Actividades</a>
+            <div class="dropdown-content">
+              <a href="actividadesVerano.html">Actividades de verano</a>
+              <a href="escuela.html">Escuela</a>
+              <a href="federadas.html">Federadas</a>
+            </div>
+          </div>
+          <a class="nav-btn" href="matriculacion.html">Matriculacion</a>
+          <div class="dropdown">
+            <a class="nav-btn" href="competiciones.html">Competiciones</a>
+            <div class="dropdown-content">
+              <a href="provincial.html">Provincial</a>
+              <a href="autonomica.html">Autonómica</a>
+              <a href="nacional.html">Nacional</a>
+            </div>
+          </div>
+          <a class="nav-btn" href="noticias.html">Noticias</a>
+          <a class="nav-btn" href="galeria.html">Galeria</a>
+          <a class="nav-btn" href="contacto.html">Contacto</a>
+          <a class="dropdown-icon" href="javascript:void(0)">
+            <span class="fas fa-bars"></span>
+          </a>
+        </div>
+        <div class="col"></div>
+      </div>
+      <!-- Navbar End -->
+    </div>
+    <!-- Menu End -->
+    <!-- Title-->
+    <div class="row nav-row-1 title">
+      <div class="col-1"></div>
+      <div class="col">
+        <font size="10">El club</font>
 
-<body>
-  <!-- Header -->
-  <div class="container">
-    <!-- Logo-->
-    <div class="row header">
-      <div class="col"></div>
-      <div class="col-11 header-top">
-        <div>
-          <img src="assets/logo_ritmica.png" class="header-logo" />
-          <a href="#">
+        <ul class="breadcrumb">
+          <li>
+            <a href="index.html">Inicio</a>
+          </li>
+          <li>
+            <a href="el_club.html">El club</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="clearfix"></div>
+
+    <div class="page-principal">
+      <div class="container-club">
+        <div class="col-club">
+          <div class="text-club">
+            <h2>
+              <strong>Club de Gimnasia Rítmica La Mojonera</strong>
+            </h2>
+            <p>
+              En el club La MEn el club La Mojonera llevamos formando gimnastas
+              de todos los niveles y categorías desde que se fundó en el año
+              2017. Desarrollamos nuestras actividades de entrenamiento en las
+              instalaciones municipales”Carpa de usos multíples” de La Mojonera
+              (Almería), siendo el único club de gimnasia rítmica de este
+              pueblo.
+            </p>
+            <p>
+              Las integrantes del club Atzar cuentan en su
+              <a id="links" href="palmares.html">
+                <strong>palmarés</strong>
+              </a>
+              con medallas de oro, plata y bronce en diversos campeonatos
+              provinciales y autonómicos. En este 202 las gimnastas Laura Gil y
+              Milagros Casado serán las primeras en participar en un Campeonato
+              Nacional Aboluto.
+            </p>
+            <br />
+            <br />
+            <div class="container-img">
+              <img
+                loading="lazy"
+                class="aling-right"
+                src="assets/original/gimt (1).jpeg"
+                alt="Imagen del club"
+                width="500"
+                height="333"
+              />
+              <p>
+                En la actualidad contamos con más de 50 gimnastas que, divididas
+                entre las secciones de escuela y club, aprenden y evolucionan
+                para participar en competiciones a todos los niveles. En la
+                sección escuela da comienzo su primera formación. Desde los tres
+                años adquieren habilidades no sólo técnicas para poder avanzar
+                en la gimnasia rítmica, sino también de compañerismo y respeto
+                hacia sus compañeras, entrenadoras y material. Su participación
+                en competiciones va desde los sencillos. Encuentros Deportivos
+                hasta los Campeonatos Provinciales, de mayor categoría, pasando
+                por los trofeos de exhibición a los que es invitado el club.
+                Aunque en la sección escuela se fomenta más el aspecto
+                recreativo, ésta es nuestro pilar más importante, ya que aquí se
+                empiezan a formar las gimnastas que más adelante nos
+                representarán a los más altos niveles.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Footer-->
+    <div class="container-fluid footer">
+      <div class="row">
+        <div class="col"></div>
+        <div class="col-3 footer-map-col">
+          <h2>Ven a visitarnos</h2>
+          <p>
+            C/ Av. Europa, 143 (Carpa de usos multiples), La Mojonera-04745,
+            Almería
+          </p>
+          <!-- <img src="assets/mapa.png" class="footer-map"> -->
+        </div>
+        <div class="col-1"></div>
+        <div class="col-3 footer-contact-col">
+          <h2>Contacta con nosotros</h2>
+          <p>
+            Tlf: 621 01 32 65<br /><br />
+            Whatsapp: +34 621 01 32 65<br /><br />
+            Correo: cdrlamojonera@gmail.com
+          </p>
+        </div>
+        <div class="col-1"></div>
+        <div class="col-3 footer-social-col">
+          <h2>Siguenos en redes sociales</h2>
+          <a href="https://www.facebook.com/ritmicalamojonera">
             <i class="fab fa-facebook-square fa-2x"></i>
           </a>
-          <a href="#">
+          <a href="https://www.youtube.com/channel/UC1t4MldjalCTkdC2cYVgVfg">
             <i class="fab fa-youtube fa-2x"></i>
           </a>
-          <a href="#">
+          <a href="https://www.instagram.com/ritmicalamojonera/?hl=es">
             <i class="fab fa-instagram-square fa-2x"></i>
           </a>
         </div>
-        <a href="login.html">
-          <i class="far fa-user fa-3x login-icon"></i>
-        </a>
+        <div class="col"></div>
       </div>
-      <div class="col"></div>
-    </div>
-
-    <!-- Menu-->
-    <div class="row menu-color">
-      <div class="col"></div>
-      <div class="col-11 topnav" id="topnav">
-        <a class="nav-btn" href="index.html">Inicio</a>
-        <div class="dropdown">
-          <a class="nav-btn" href="el_club.html">El Club</a>
-          <div class="dropdown-content">
-            <a href="cuerpoTecnico.html">Cuerpo técnico</a>
-            <a href="palmares.html">Palmarés</a>
-          </div>
+      <div class="row">
+        <div class="col footer-copyright-col">
+          <p>
+            Copyright © 2020 - Ritmica la Mojonera - Todos los derechos
+            reservados
+          </p>
+          <button onclick="goBack()" id="goback-btn">
+            <i class="fas fa-arrow-up"></i>
+          </button>
         </div>
-        <a class="nav-btn" href="normativa.html">Normativa</a>
-        <div class="dropdown">
-          <a class="nav-btn" href="actividades.html">Actividades</a>
-          <div class="dropdown-content">
-            <a href="actividadesVerano.html">Actividades de verano</a>
-            <a href="escuela.html">Escuela</a>
-            <a href="federadas.html">Federadas</a>
-          </div>
-        </div>
-        <a class="nav-btn" href="matriculacion.html">Matriculacion</a>
-        <div class="dropdown">
-          <a class="nav-btn" href="competiciones.html">Competiciones</a>
-          <div class="dropdown-content">
-            <a href="provincial.html">Provincial</a>
-            <a href="autonomica.html">Autonómica</a>
-            <a href="nacional.html">Nacional</a>
-          </div>
-        </div>
-        <a class="nav-btn" href="contacto.html">Contacto</a>
-        <a class="dropdown-icon" href="javascript:void(0)">
-          <i class="fas fa-bars"></i>
-        </a>
-      </div>
-      <div class="col"></div>
-    </div>
-  </div>
-
-  <!-- Title-->
-  <div class="row nav-row-1 title">
-    <div class="col-1"></div>
-    <div class="col">
-      <font size="10">El club</font>
-
-      <ul class="breadcrumb">
-        <li>
-          <a href="index.html">Inicio</a>
-        </li>
-        <li>
-          <a href="el_club.html">El club</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-  <div class="clearfix"></div>
-
-  <!-- Footer-->
-  <div class="container-fluid footer">
-    <div class="row">
-      <div class="col"></div>
-      <div class="col-3 footer-map-col">
-        <h2>Ven a visitarnos</h2>
-        <p>
-          C/ Av. Europa, 143 (Carpa de usos multiples), La Mojonera-04745,
-          Almería
-        </p>
-        <!-- <img src="assets/mapa.png" class="footer-map"> -->
-      </div>
-      <div class="col-1"></div>
-      <div class="col-3 footer-contact-col">
-        <h2>Contacta con nosotros</h2>
-        <p>
-          Tlf: 621 01 32 65<br /><br />
-          Whatsapp: +34 621 01 32 65<br /><br />
-          Correo: cdrlamojonera@gmail.com
-        </p>
-      </div>
-      <div class="col-1"></div>
-      <div class="col-3 footer-social-col">
-        <h2>Siguenos en redes sociales</h2>
-        <a href="https://www.facebook.com/ritmicalamojonera">
-          <i class="fab fa-facebook-square fa-2x"></i>
-        </a>
-        <a href="https://www.youtube.com/channel/UC1t4MldjalCTkdC2cYVgVfg">
-          <i class="fab fa-youtube fa-2x"></i>
-        </a>
-        <a href="https://www.instagram.com/ritmicalamojonera/?hl=es">
-          <i class="fab fa-instagram-square fa-2x"></i>
-        </a>
-      </div>
-      <div class="col"></div>
-    </div>
-    <div class="row">
-      <div class="col footer-copyright-col">
-        <p>
-          Copyright © 2020 - Ritmica la Mojonera - Todos los derechos
-          reservados
-        </p>
-        <button onclick="goBack()" id="goback-btn">
-          <i class="fas fa-arrow-up"></i>
-        </button>
       </div>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
