Arreglado titulo, añadidos archivos html

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CD Ritmica la mojonera</title>
 
   <!-- FontAwesome CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
@@ -19,14 +19,14 @@
     <div class="row header-row">
       <div class="col"></div>
       <div class="col-10 header-col">
-        <a href="index.html">
-          <img src="assets/logo_ritmica2.png">
+        <a href="/index.html">
+          <img src="/assets/logo_ritmica2.png">
         </a>
         <div class="header-icon-wrapper">
           <a href="https://www.facebook.com/ritmicalamojonera" class="fab fa-facebook-square"></a>
           <a href="https://www.youtube.com/channel/UC1t4MldjalCTkdC2cYVgVfg" class="fab fa-youtube"></a>
           <a href="https://www.instagram.com/ritmicalamojonera/?hl=es" class="fab fa-instagram-square"></a>
-          <a href="login.html" class="far fa-user"></a>
+          <a href="/html/login.html" class="far fa-user"></a>
         </div>
       </div>
       <div class="col"></div>
@@ -37,35 +37,35 @@
     <div class="row nav-row">
       <div class="col"></div>
       <div class="col-10 nav-col" id="nav-col">
-        <a class="nav-btn" href="index.html">Inicio</a>
+        <a class="nav-btn" href="/index.html">Inicio</a>
         <div class="dropdown">
-          <a class="nav-btn" href="el_club.html">El Club</a>
+          <a class="nav-btn" href="/html/el_club.html">El Club</a>
           <div class="dropdown-content">
-            <a href="cuerpoTecnico.html">Cuerpo técnico</a>
-            <a href="palmares.html">Palmarés</a>
+            <a href="/html/cuerpo_tecnico.html">Cuerpo técnico</a>
+            <a href="/html/palmares.html">Palmarés</a>
           </div>
         </div>
-        <a class="nav-btn" href="normativa.html">Normativa</a>
+        <a class="nav-btn" href="/html/normativa.html">Normativa</a>
         <div class="dropdown">
-          <a class="nav-btn" href="actividades.html">Actividades</a>
+          <a class="nav-btn" href="/html/actividades.html">Actividades</a>
           <div class="dropdown-content">
-            <a href="actividadesVerano.html">Actividades de verano</a>
-            <a href="escuela.html">Escuela</a>
-            <a href="federadas.html">Federadas</a>
+            <a href="/html/actividades_verano.html">Actividades de verano</a>
+            <a href="/html/escuela.html">Escuela</a>
+            <a href="/html/federadas.html">Federadas</a>
           </div>
         </div>
-        <a class="nav-btn" href="matriculacion.html">Matriculacion</a>
+        <a class="nav-btn" href="/html/matriculacion.html">Matriculación</a>
         <div class="dropdown">
-          <a class="nav-btn" href="competiciones.html">Competiciones</a>
+          <a class="nav-btn" href="/html/competiciones.html">Competiciones</a>
           <div class="dropdown-content">
-            <a href="provincial.html">Provincial</a>
-            <a href="autonomica.html">Autonómica</a>
-            <a href="nacional.html">Nacional</a>
+            <a href="/html/provincial.html">Provincial</a>
+            <a href="/html/autonomica.html">Autonómica</a>
+            <a href="/html/nacional.html">Nacional</a>
           </div>
         </div>
-        <a class="nav-btn" href="noticias.html">Noticias</a>
-        <a class="nav-btn" href="galeria.html">Galeria</a>
-        <a class="nav-btn" href="contacto.html">Contacto</a>
+        <a class="nav-btn" href="/html/noticias.html">Noticias</a>
+        <a class="nav-btn" href="/html/galeria.html">Galería</a>
+        <a class="nav-btn" href="/html/contacto.html">Contacto</a>
         <a class="dropdown-icon" href="javascript:void(0)">
           <span class="fas fa-bars"></span>
         </a>
@@ -111,7 +111,7 @@
     <div class="row news-row">
       <div class="col-6 news-col">
         <div class="img-wrap">
-          <img src="assets/noticia.jpg" class="news-image" />
+          <img src="/assets/noticia.jpg" class="news-image">
         </div>
         <div class="news-text">
           <h5>10 octubre 2020</h5>
@@ -125,7 +125,7 @@
       </div>
       <div class="col-6 news-col">
         <div class="img-wrap">
-          <img src="assets/Más fotos/WhatsApp Image 2020-10-29 at 14.49.15 (1).jpeg" class="news-image" />
+          <img src="/assets/Más fotos/WhatsApp Image 2020-10-29 at 14.49.15 (1).jpeg" class="news-image" />
         </div>
         <div class="news-text">
           <h5>2 agosto 2020</h5>
@@ -151,8 +151,8 @@
           Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo
         </p>
         <div class="callout-btn-section">
-          <a href="contacto.html" target="blank" class="callout-btn1">Contacto</a>
-          <a href="matriculacion.html" class="callout-btn2">Inscríbete</a>
+          <a href="/html/contacto.html" target="blank" class="callout-btn1">Contacto</a>
+          <a href="/html/matriculacion.html" class="callout-btn2">Inscríbete</a>
         </div>
       </div>
     </div>
@@ -210,7 +210,7 @@
   <!-- JQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-  <script src="main.js"></script>
+  <script src="/main.js"></script>
 </body>
 
 </html>
