--- a/html/autonomica.html
+++ b/html/autonomica.html
@@ -9,7 +9,7 @@
   <!-- FontAwesome CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/autonomica.css">
 </head>
 
@@ -20,7 +20,7 @@
     <div class="row header-row">
       <div class="col"></div>
       <div class="col-10 header-col">
-        <a href="/index.html">
+        <a href="/html/index.html">
           <img src="/assets/logo_ritmica2.png">
         </a>
         <div class="header-icon-wrapper">
@@ -38,7 +38,7 @@
     <div class="row nav-row">
       <div class="col"></div>
       <div class="col-10 nav-col" id="nav-col">
-        <a class="nav-btn" href="/index.html">Inicio</a>
+        <a class="nav-btn" href="/html/index.html">Inicio</a>
         <div class="dropdown">
           <a class="nav-btn" href="/html/el_club.html">El Club</a>
           <div class="dropdown-content">
@@ -91,7 +91,7 @@
 
       <div class="col-5 title-col">
         <div class="title-path">
-          <a href="/index.html">Inicio</a>
+          <a href="/html/index.html">Inicio</a>
           <span>/</span>
           <a href="/html/competiciones.html">Competiciones</a>
           <span>/</span>
