--- a/html/index.html
+++ b/html/index.html
@@ -4,13 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Provincial</title>
+  <title>CD Ritmica la mojonera</title>
 
   <!-- FontAwesome CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
   <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/provincial.css">
 </head>
 
 <body>
@@ -77,40 +76,128 @@
   </div>
   <!-- Menu End -->
 
-
-  <!-- Title Start -->
-  <div class="container">
-    <div class="row title-row">
-
-      <div class="col title-empty-col"></div>
-      <div class="col-5 title-col">
-        <div class="title-main">
-          <a href="/html/provincial.html">Provincial</a>
+  <!-- Slider Start -->
+  <div class="slider">
+    <div class="slides">
+      <div class="slide slide-left">
+        <div class="slide-text-container">
+          <div class="slide-text"><span></span></div>
         </div>
       </div>
-
-      <div class="col-5 title-col">
-        <div class="title-path">
-          <a href="/html/index.html">Inicio</a>
-          <span>/</span>
-          <a href="/html/competiciones.html">Competiciones</a>
-          <span>/</span>
-          <a href="/html/provincial.html">Provincial</a>
+      <div class="slide slide-main">
+        <div class="slide-text-container">
+          <div class="slide-text"><span>Texto de Ejemplo 1</span></div>
         </div>
       </div>
-      <div class="col title-empty-col"></div>
-
+      <div class="slide slide-right">
+        <div class="slide-text-container">
+          <div class="slide-text"><span></span></div>
+        </div>
+      </div>
+    </div>
+    <div class="slider-btns">
+      <div class="slide-btn" id="slide-btn-1"></div>
+      <div class="slide-btn" id="slide-btn-2"></div>
+      <div class="slide-btn" id="slide-btn-3"></div>
     </div>
   </div>
-  <!-- Title End -->
+  <!-- Slider End -->
 
 
-  <!-- Borrar este div, es solo temporal -->
-  <div style="height: 400px; background-color: lightblue;">
-
+  <!-- News Start -->
+  <div class="container news-container">
+    <h1>Últimas Noticias</h1>
+    <div class="row news-row">
+      <div class="col-6 news-col">
+        <div class="img-wrap">
+          <img src="/assets/noticia.jpg" class="news-image" />
+        </div>
+        <div class="news-text">
+          <h5>10 octubre 2020</h5>
+          <h3>Entrevista con el diario D-cerca</h3>
+          <p>
+            Entrevistamos a Fabiana Pereyra, del Club Gimnasia Rítmica La
+            Mojonera, quien nos cuenta cómo han vivido el confinamiento las
+            gimnastas del club...
+          </p>
+          <a>Leer mas</a>
+        </div>
+      </div>
+      <div class="col-6 news-col">
+        <div class="img-wrap">
+          <img src="/assets/Más fotos/WhatsApp Image 2020-10-29 at 14.49.15 (1).jpeg" class="news-image" />
+        </div>
+        <div class="news-text">
+          <h5>2 agosto 2020</h5>
+          <h3>Protocolo Covid</h3>
+          <p>
+            Nuestras instalaciones son amplias y nos permiten cumplir con
+            todos los protocolos texto de ejemplo texto de ejemplo texto de
+            ejemplo texto de e...
+          </p>
+          <a>Leer mas</a>
+        </div>
+      </div>
+    </div>
   </div>
-  <!-- Borrar este div, es solo temporal -->
+  <!-- News End -->
 
+
+  <!-- News Start -->
+  <div class="container news-container">
+    <h1>Últimas Noticias</h1>
+    <div class="row news-row">
+      <div class="col-6 news-col">
+        <div class="img-wrap">
+          <img src="/assets/noticia.jpg" class="news-image" />
+        </div>
+        <div class="news-text">
+          <h5>10 octubre 2020</h5>
+          <h3>Entrevista con el diario D-cerca</h3>
+          <p>
+            Entrevistamos a Fabiana Pereyra, del Club Gimnasia Rítmica La Mojonera, quien nos cuenta cómo han vivido
+            el
+            confinamiento las gimnastas del club...
+          </p>
+          <a>Leer mas</a>
+        </div>
+      </div>
+      <div class="col-6 news-col">
+        <div class="img-wrap">
+          <img src="/assets/Más fotos/WhatsApp Image 2020-10-29 at 14.49.15 (1).jpeg" class="news-image" />
+        </div>
+        <div class="news-text">
+          <h5>2 agosto 2020</h5>
+          <h3>Protocolo Covid</h3>
+          <p>
+            Nuestras instalaciones son amplias y nos permiten cumplir con todos los protocolos texto de ejemplo texto
+            de
+            ejemplo texto de ejemplo texto de e...
+          </p>
+          <a>Leer mas</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- News End -->
+
+
+  <!-- Callout Start -->
+  <div class="container callout">
+    <div class="row">
+      <div class="col-12 callout-col">
+        <h1>Texto de ejemplo</h1>
+        <p>
+          Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo
+        </p>
+        <div class="callout-btn-section">
+          <a href="/html/contacto.html" target="blank" class="callout-btn1">Contacto</a>
+          <a href="/html/matriculacion.html" class="callout-btn2">Inscríbete</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Callout End -->
 
   <!-- Footer Start -->
   <div class="container footer">
