--- a/index.html
+++ b/index.html
@@ -73,232 +73,182 @@
       </div>
       <!-- Navbar End -->
     </div>
-    <<<<<<< HEAD <!-- Header End -->
+    <!-- Menu End -->
 
-      <!-- Navbar Start -->
-      <div class="row nav-row">
-        <div class="col"></div>
-        <div class="col-10 nav-col" id="nav-col">
-          <a class="nav-btn" href="/index.html">Inicio</a>
-          <div class="dropdown">
-            <a class="nav-btn" href="/html/el_club.html">El Club</a>
-            <div class="dropdown-content">
-              <a href="/html/cuerpo_tecnico.html">Cuerpo técnico</a>
-              <a href="/html/palmares.html">Palmarés</a>
-            </div>
+    <!-- Slider Start -->
+    <div class="slider">
+      <div class="slides">
+        <div class="slide slide-left">
+          <div class="slide-text-container">
+            <div class="slide-text"><span></span></div>
           </div>
-          <a class="nav-btn" href="/html/normativa.html">Normativa</a>
-          <div class="dropdown">
-            <a class="nav-btn" href="/html/actividades.html">Actividades</a>
-            <div class="dropdown-content">
-              <a href="/html/actividades_verano.html">Actividades de verano</a>
-              <a href="/html/escuela.html">Escuela</a>
-              <a href="/html/federadas.html">Federadas</a>
-            </div>
+        </div>
+        <div class="slide slide-main">
+          <div class="slide-text-container">
+            <div class="slide-text"><span>Texto de Ejemplo 1</span></div>
           </div>
-          <a class="nav-btn" href="/html/matriculacion.html">Matriculación</a>
-          <div class="dropdown">
-            <a class="nav-btn" href="/html/competiciones.html">Competiciones</a>
-            <div class="dropdown-content">
-              <a href="/html/provincial.html">Provincial</a>
-              <a href="/html/autonomica.html">Autonómica</a>
-              <a href="/html/nacional.html">Nacional</a>
-            </div>
+        </div>
+        <div class="slide slide-right">
+          <div class="slide-text-container">
+            <div class="slide-text"><span></span></div>
           </div>
-          <a class="nav-btn" href="/html/noticias.html">Noticias</a>
-          <a class="nav-btn" href="/html/galeria.html">Galería</a>
-          <a class="nav-btn" href="/html/contacto.html">Contacto</a>
-          <a class="dropdown-icon" href="javascript:void(0)">
-            <span class="fas fa-bars"></span>
-          </a>
-          =======
-          <!-- Menu End -->
+        </div>
+      </div>
+      <div class="slider-btns">
+        <div class="slide-btn" id="slide-btn-1"></div>
+        <div class="slide-btn" id="slide-btn-2"></div>
+        <div class="slide-btn" id="slide-btn-3"></div>
+      </div>
+    </div>
+    <!-- Slider End -->
 
-          <!-- Slider Start -->
-          <div class="slider">
-            <div class="slides">
-              <div class="slide slide-left">
-                <div class="slide-text-container">
-                  <div class="slide-text"><span></span></div>
-                </div>
-              </div>
-              <div class="slide slide-main">
-                <div class="slide-text-container">
-                  <div class="slide-text"><span>Texto de Ejemplo 1</span></div>
-                </div>
-              </div>
-              <div class="slide slide-right">
-                <div class="slide-text-container">
-                  <div class="slide-text"><span></span></div>
-                </div>
-              </div>
-              >>>>>>> 7325726f9118947d966c42217bfed8a7e360ceda
-            </div>
-            <div class="slider-btns">
-              <div class="slide-btn" id="slide-btn-1"></div>
-              <div class="slide-btn" id="slide-btn-2"></div>
-              <div class="slide-btn" id="slide-btn-3"></div>
-            </div>
+
+    <!-- News Start -->
+    <div class="container news-container">
+      <h1>Últimas Noticias</h1>
+      <div class="row news-row">
+        <div class="col-6 news-col">
+          <div class="img-wrap">
+            <img src="assets/noticia.jpg" class="news-image" />
           </div>
-          <!-- Slider End -->
-
-          <!-- News Start -->
-          <div class="container news-container">
-            <h1>Últimas Noticias</h1>
-            <div class="row news-row">
-              <div class="col-6 news-col">
-                <div class="img-wrap">
-                  <img src="assets/noticia.jpg" class="news-image" />
-                </div>
-                <div class="news-text">
-                  <h5>10 octubre 2020</h5>
-                  <h3>Entrevista con el diario D-cerca</h3>
-                  <p>
-                    Entrevistamos a Fabiana Pereyra, del Club Gimnasia Rítmica La
-                    Mojonera, quien nos cuenta cómo han vivido el confinamiento las
-                    gimnastas del club...
-                  </p>
-                  <a>Leer mas</a>
-                </div>
-              </div>
-              <div class="col-6 news-col">
-                <div class="img-wrap">
-                  <img src="assets/Más fotos/WhatsApp Image 2020-10-29 at 14.49.15 (1).jpeg" class="news-image" />
-                </div>
-                <div class="news-text">
-                  <h5>2 agosto 2020</h5>
-                  <h3>Protocolo Covid</h3>
-                  <p>
-                    Nuestras instalaciones son amplias y nos permiten cumplir con
-                    todos los protocolos texto de ejemplo texto de ejemplo texto de
-                    ejemplo texto de e...
-                  </p>
-                  <a>Leer mas</a>
-                </div>
-              </div>
-            </div>
+          <div class="news-text">
+            <h5>10 octubre 2020</h5>
+            <h3>Entrevista con el diario D-cerca</h3>
+            <p>
+              Entrevistamos a Fabiana Pereyra, del Club Gimnasia Rítmica La
+              Mojonera, quien nos cuenta cómo han vivido el confinamiento las
+              gimnastas del club...
+            </p>
+            <a>Leer mas</a>
           </div>
-          <!-- News End -->
-
-          <!-- Callout Start -->
-          <div class="container callout">
-            <div class="row">
-              <div class="col-12 callout-col">
-                <h1>Texto de ejemplo</h1>
-                <p>
-                  Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo
-                </p>
-                <div class="callout-btn-section">
-                  <a href="contacto.html" target="blank" class="callout-btn1">Contacto</a>
-                  <a href="matriculacion.html" class="callout-btn2">Inscríbete</a>
-                </div>
-              </div>
-            </div>
+        </div>
+        <div class="col-6 news-col">
+          <div class="img-wrap">
+            <img src="assets/Más fotos/WhatsApp Image 2020-10-29 at 14.49.15 (1).jpeg" class="news-image" />
           </div>
-          <!-- Callout End -->
-
-          <<<<<<< HEAD <!-- News Start -->
-            <div class="container news-container">
-              <h1>Últimas Noticias</h1>
-              <div class="row news-row">
-                <div class="col-6 news-col">
-                  <div class="img-wrap">
-                    <img src="/assets/noticia.jpg" class="news-image">
-                  </div>
-                  <div class="news-text">
-                    <h5>10 octubre 2020</h5>
-                    <h3>Entrevista con el diario D-cerca</h3>
-                    =======
-                    <!-- Footer Start -->
-                    <div class="container footer">
-                      <div class="row">
-                        <div class="col-4 footer-col">
-                          <h1>Ven a visitarnos</h1>
-                          >>>>>>> 7325726f9118947d966c42217bfed8a7e360ceda
-                          <p>
-                            Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo
-                            texto de ejemplo texto de ejemplo
-                          </p>
-                          <p>
-                            <a>
-                              C/ Av. Europa, 143 (Carpa de usos multiples), La Mojonera-04745,
-                              Almería
-                            </a>
-                          </p>
-                        </div>
-                        <<<<<<< HEAD </div>
-                          <div class="col-6 news-col">
-                            <div class="img-wrap">
-                              <img src="/assets/Más fotos/WhatsApp Image 2020-10-29 at 14.49.15 (1).jpeg"
-                                class="news-image" />
-                              =======
-                              <div class="col-4 footer-col">
-                                <h1>Contacta con nosotros</h1>
-                                <p>
-                                  Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo
-                                  texto de ejemplo
-                                </p>
-                                <p>
-                                  Correo: <a>cdrlamojonera@gmail.com</a><br />
-                                  Telefono: <a>621 013 265</a><br />
-                                  Whatsapp: <a>+34 621 013 265</a><br />
-                                </p>
-                                >>>>>>> 7325726f9118947d966c42217bfed8a7e360ceda
-                              </div>
-                              <div class="col-4 footer-col">
-                                <h1>Siguenos en redes sociales</h1>
-                                <p>
-                                  Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo
-                                  texto de ejemplo texto de ejemplo texto de ejemplo
-                                </p>
-                                <a href="https://www.facebook.com/ritmicalamojonera" class="fab fa-facebook-square"></a>
-                                <a href="https://www.youtube.com/channel/UC1t4MldjalCTkdC2cYVgVfg"
-                                  class="fab fa-youtube"></a>
-                                <a href="https://www.instagram.com/ritmicalamojonera/?hl=es"
-                                  class="fab fa-instagram-square"></a>
-                              </div>
-                            </div>
-                            <<<<<<< HEAD </div>
-                          </div>
-                          <!-- News End -->
+          <div class="news-text">
+            <h5>2 agosto 2020</h5>
+            <h3>Protocolo Covid</h3>
+            <p>
+              Nuestras instalaciones son amplias y nos permiten cumplir con
+              todos los protocolos texto de ejemplo texto de ejemplo texto de
+              ejemplo texto de e...
+            </p>
+            <a>Leer mas</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- News End -->
 
 
-                          <!-- Callout Start -->
-                          <div class="container callout">
-                            <div class="row">
-                              <div class="col-12 callout-col">
-                                <h1>Texto de ejemplo</h1>
-                                <p>
-                                  Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo
-                                </p>
-                                <div class="callout-btn-section">
-                                  <a href="/html/contacto.html" target="blank" class="callout-btn1">Contacto</a>
-                                  <a href="/html/matriculacion.html" class="callout-btn2">Inscríbete</a>
-                                  =======
-                                  <div class="row">
-                                    <div class="col footer-copyright-col">
-                                      <p>
-                                        Copyright © 2020 - Ritmica la Mojonera - Todos los derechos
-                                        reservados
-                                      </p>
-                                      >>>>>>> 7325726f9118947d966c42217bfed8a7e360ceda
-                                    </div>
-                                  </div>
-                                  <button onclick="goBack()" id="goback-btn">
-                                    <i class="fas fa-arrow-up"></i>
-                                  </button>
-                                </div>
-                                <!-- Footer End -->
+    <!-- News Start -->
+    <div class="container news-container">
+      <h1>Últimas Noticias</h1>
+      <div class="row news-row">
+        <div class="col-6 news-col">
+          <div class="img-wrap">
+            <img src="assets/noticia.jpg" class="news-image" />
+          </div>
+          <div class="news-text">
+            <h5>10 octubre 2020</h5>
+            <h3>Entrevista con el diario D-cerca</h3>
+            <p>
+              Entrevistamos a Fabiana Pereyra, del Club Gimnasia Rítmica La Mojonera, quien nos cuenta cómo han vivido
+              el
+              confinamiento las gimnastas del club...
+            </p>
+            <a>Leer mas</a>
+          </div>
+        </div>
+        <div class="col-6 news-col">
+          <div class="img-wrap">
+            <img src="assets/Más fotos/WhatsApp Image 2020-10-29 at 14.49.15 (1).jpeg" class="news-image" />
+          </div>
+          <div class="news-text">
+            <h5>2 agosto 2020</h5>
+            <h3>Protocolo Covid</h3>
+            <p>
+              Nuestras instalaciones son amplias y nos permiten cumplir con todos los protocolos texto de ejemplo texto
+              de
+              ejemplo texto de ejemplo texto de e...
+            </p>
+            <a>Leer mas</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- News End -->
 
-                                <<<<<<< HEAD <script src="/main.js">
-                                  </script>
-</body>
-=======
-<!-- JQuery -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
->>>>>>> 7325726f9118947d966c42217bfed8a7e360ceda
 
-<script src="main.js"></script>
+    <!-- Callout Start -->
+    <div class="container callout">
+      <div class="row">
+        <div class="col-12 callout-col">
+          <h1>Texto de ejemplo</h1>
+          <p>
+            Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo
+          </p>
+          <div class="callout-btn-section">
+            <a href="contacto.html" target="blank" class="callout-btn1">Contacto</a>
+            <a href="matriculacion.html" class="callout-btn2">Inscríbete</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Callout End -->
+
+    <!-- Footer Start -->
+    <div class="container footer">
+      <div class="row">
+        <div class="col-4 footer-col">
+          <h1>Ven a visitarnos</h1>
+          <p>Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto
+            de ejemplo</p>
+          <p>
+            <a>
+              C/ Av. Europa, 143 (Carpa de usos multiples), La Mojonera-04745,
+              Almería
+            </a>
+          </p>
+        </div>
+        <div class="col-4 footer-col">
+          <h1>Contacta con nosotros</h1>
+          <p>Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo</p>
+          <p>
+            Correo: <a>cdrlamojonera@gmail.com</a><br>
+            Telefono: <a>621 013 265</a><br>
+            Whatsapp: <a>+34 621 013 265</a><br>
+          </p>
+        </div>
+        <div class="col-4 footer-col">
+          <h1>Siguenos en redes sociales</h1>
+          <p>Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo texto
+            de ejemplo texto de ejemplo</p>
+          <a href="https://www.facebook.com/ritmicalamojonera" class="fab fa-facebook-square"></a>
+          <a href="https://www.youtube.com/channel/UC1t4MldjalCTkdC2cYVgVfg" class="fab fa-youtube"></a>
+          <a href="https://www.instagram.com/ritmicalamojonera/?hl=es" class="fab fa-instagram-square"></a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col footer-copyright-col">
+          <p>
+            Copyright © 2020 - Ritmica la Mojonera - Todos los derechos
+            reservados
+          </p>
+        </div>
+      </div>
+      <button onclick="goBack()" id="goback-btn">
+        <i class="fas fa-arrow-up"></i>
+      </button>
+    </div>
+    <!-- Footer End -->
+
+
+    <!-- JQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
