todo en carpetas

--- a/html/el_club.html
+++ b/html/el_club.html
@@ -103,11 +103,59 @@
   <!-- Title End -->
 
 
-  <!-- Borrar este div, es solo temporal -->
-  <div style="height: 400px; background-color: lightblue;">
-
+  <!-- Content Start -->
+  <div class="page-principal">
+    <div class="container-club">
+      <div class="col-club">
+        <div class="text-club">
+          <h2>
+            <strong>Club de Gimnasia Rítmica La Mojonera</strong>
+          </h2>
+          <p>
+            En el club La MEn el club La Mojonera llevamos formando gimnastas
+            de todos los niveles y categorías desde que se fundó en el año
+            2017. Desarrollamos nuestras actividades de entrenamiento en las
+            instalaciones municipales”Carpa de usos multíples” de La Mojonera
+            (Almería), siendo el único club de gimnasia rítmica de este
+            pueblo.
+          </p>
+          <p>
+            Las integrantes del club Atzar cuentan en su
+            <a id="links" href="palmares.html">
+              <strong>palmarés</strong>
+            </a>
+            con medallas de oro, plata y bronce en diversos campeonatos
+            provinciales y autonómicos. En este 202 las gimnastas Laura Gil y
+            Milagros Casado serán las primeras en participar en un Campeonato
+            Nacional Aboluto.
+          </p>
+          <br />
+          <br />
+          <div class="container-img">
+            <img loading="lazy" class="aling-right" src="/assets/original/gimt (1).jpeg" alt="Imagen del club"
+              width="500" height="333" />
+            <p>
+              En la actualidad contamos con más de 50 gimnastas que, divididas
+              entre las secciones de escuela y club, aprenden y evolucionan
+              para participar en competiciones a todos los niveles. En la
+              sección escuela da comienzo su primera formación. Desde los tres
+              años adquieren habilidades no sólo técnicas para poder avanzar
+              en la gimnasia rítmica, sino también de compañerismo y respeto
+              hacia sus compañeras, entrenadoras y material. Su participación
+              en competiciones va desde los sencillos. Encuentros Deportivos
+              hasta los Campeonatos Provinciales, de mayor categoría, pasando
+              por los trofeos de exhibición a los que es invitado el club.
+              Aunque en la sección escuela se fomenta más el aspecto
+              recreativo, ésta es nuestro pilar más importante, ya que aquí se
+              empiezan a formar las gimnastas que más adelante nos
+              representarán a los más altos niveles.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <!-- Borrar este div, es solo temporal -->
+  <!-- Content End -->
 
 
   <!-- Footer Start -->
@@ -160,7 +208,7 @@
   <!-- JQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-  <script src="/main.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 
 </html>
