--- a/html/index.html
+++ b/html/index.html
@@ -76,6 +76,7 @@
   </div>
   <!-- Menu End -->
 
+
   <!-- Slider Start -->
   <div class="slider">
     <div class="slides">
@@ -102,45 +103,6 @@
     </div>
   </div>
   <!-- Slider End -->
-
-
-  <!-- News Start -->
-  <div class="container news-container">
-    <h1>Últimas Noticias</h1>
-    <div class="row news-row">
-      <div class="col-6 news-col">
-        <div class="img-wrap">
-          <img src="/assets/noticia.jpg" class="news-image" />
-        </div>
-        <div class="news-text">
-          <h5>10 octubre 2020</h5>
-          <h3>Entrevista con el diario D-cerca</h3>
-          <p>
-            Entrevistamos a Fabiana Pereyra, del Club Gimnasia Rítmica La
-            Mojonera, quien nos cuenta cómo han vivido el confinamiento las
-            gimnastas del club...
-          </p>
-          <a>Leer mas</a>
-        </div>
-      </div>
-      <div class="col-6 news-col">
-        <div class="img-wrap">
-          <img src="/assets/Más fotos/WhatsApp Image 2020-10-29 at 14.49.15 (1).jpeg" class="news-image" />
-        </div>
-        <div class="news-text">
-          <h5>2 agosto 2020</h5>
-          <h3>Protocolo Covid</h3>
-          <p>
-            Nuestras instalaciones son amplias y nos permiten cumplir con
-            todos los protocolos texto de ejemplo texto de ejemplo texto de
-            ejemplo texto de e...
-          </p>
-          <a>Leer mas</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- News End -->
 
 
   <!-- News Start -->
@@ -199,6 +161,7 @@
   </div>
   <!-- Callout End -->
 
+
   <!-- Footer Start -->
   <div class="container footer">
     <div class="row">
@@ -249,7 +212,7 @@
   <!-- JQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-  <script src="/main.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 
 </html>
