--- a/html/login.html
+++ b/html/login.html
@@ -2,8 +2,8 @@
 <html lang="es">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Iniciar sesión</title>
 
   <!--Bootstrap-->
@@ -13,7 +13,8 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
 
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/css/login.css" />
 </head>
 
 <body>
@@ -21,7 +22,7 @@
     <div class="main-section">
       <div class="border-0 modal-content">
         <div class="col-12 user-img text-center">
-          <img src="assets/logo_ritmica.png" width="150px" height="150px" />
+          <img src="/assets/logo_ritmica.png" width="150px" height="150px" />
         </div>
         <form class="formulario">
           <h1>Iniciar sesión</h1>
@@ -46,6 +47,7 @@
       </div>
     </div>
   </div>
+
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
